--- a/lab3/task0/makefile
+++ b/lab3/task0/makefile
@@ -1,8 +1,12 @@
-exec: bubblesort.o
+exec: bubblesort.o task0b.o
 	gcc -g -m32 -Wall -ansi -o bubblesort bubblesort.o
+	gcc -g -m32 -Wall -ansi -o hexaPrint task0b.o
 
 bubblesort.o: bubblesort.c
 	gcc -g -m32 -Wall -ansi -c -o bubblesort.o bubblesort.c
+	
+task0b.o: task0b.c
+	gcc -g -m32 -Wall -ansi -c -o task0b.o task0b.c
 
 .PHONY: clean
 
