Added valgrind command

--- a/lab6/task2/makefile
+++ b/lab6/task2/makefile
@@ -9,6 +9,12 @@ LineParser.o: LineParser.c LineParser.h
 task2.o: task2.c
 	gcc -m32 -c -o task2.o task2.c
 
+val: myshell
+	valgrind --leak-check=full \
+         --show-leak-kinds=all \
+         --track-origins=yes \
+         ./myshell
+
 .PHONY: clean
 
 clean:
