Fixed makefile for task0

--- a/lab7/task0/makefile
+++ b/lab7/task0/makefile
@@ -1,26 +1,12 @@
 all: exec
 
-exec: task2.o LineParser.o
-	gcc -g -Wall -o myshell task2.o LineParser.o
+exec: mypipe.o
+	gcc -g -Wall -o mypipe mypipe.o
 
-task2.o: task2.c
-	gcc -g -Wall -c -o task2.o task2.c
+mypipe.o: mypipe.c
+	gcc -g -Wall -c -o mypipe.o mypipe.c
 
-LineParser.o: LineParser.c
-	gcc -g -Wall -c -o LineParser.o LineParser.c
-	
 .PHONY: clean val
 
 clean:
-	rm -rf *.o myshell
-
-run:
-	clear
-	./myshell
-
-val: 
-	clear
-	valgrind --leak-check=full \
-         --show-leak-kinds=all \
-         --track-origins=yes \
-         ./myshell
+	rm -rf *.o mypipe
