Working on task3

--- a/lab8/task3/makefile
+++ b/lab8/task3/makefile
@@ -12,6 +12,10 @@ task3: task3.o
 task3.o: task3.c
 	gcc -c -m32 -fno-pie -o task3.o task3.c
 
+run: patch task3
+	clear
+	./patch task3 000005bd 86 fibonacci 0000065d
+
 .PHONY: clean
 
 clean:
