--- a/lab8/task3/makefile
+++ b/lab8/task3/makefile
@@ -13,8 +13,14 @@ task3.o: task3.c
 	gcc -c -m32 -fno-pie -o task3.o task3.c
 
 run: patch task3
-	./patch task3 56d 122 fibonacci 65d
+	./patch task3 57d 122 fibonacci 65d
 	./fibonacci 33
+
+dis1: task3
+	objdump -d -R task3
+
+dis2: fibonacci
+	objdump -d -R fibonacci
 
 .PHONY: clean
 
