Fixed task3 according to marina

--- a/lab8/task3/makefile
+++ b/lab8/task3/makefile
@@ -1,4 +1,4 @@
-all:patch task3
+all:patch task3 fibonacci
 
 patch: patch.o
 	gcc -m32 -fno-pie -o patch patch.o
@@ -12,9 +12,21 @@ task3: task3.o
 task3.o: task3.c
 	gcc -c -m32 -fno-pie -o task3.o task3.c
 
+fibonacci: fibonacci.o
+	gcc -m32 -fno-pie -o fibonacci fibonacci.o
+
+fibonacci.o: fibonacci.c 
+	gcc -c -m32 -fno-pie -o fibonacci.o fibonacci.c
+
 run: patch task3
-	./patch task3 57d 122 fibonacci 65d
+	./patch task3 5c9 106 fibonacci 5c9
 	./fibonacci 33
+
+read1: 
+	readelf -s task3
+
+read2:
+	readelf -s fibonacci
 
 dis1: task3
 	objdump -d -R task3
@@ -22,7 +34,12 @@ dis1: task3
 dis2: fibonacci
 	objdump -d -R fibonacci
 
+reset: 
+	make clean
+	make fibonacci
+	clear
+
 .PHONY: clean
 
 clean:
-	rm -rf *.o patch
+	rm -rf *.o patch task3 fibonacci
